--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,8 @@
     <style name="Base.Theme.FragmentGuide0" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor">#FF63B6C1</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="Theme.FragmentGuide0" parent="Base.Theme.FragmentGuide0" />
